server up and running

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -9,6 +9,10 @@
     <title>Express Quotes</title>
 </head>
 <body>
+    <h1>Express Quotes Example</h1>
+    <div id="output">
+        <ul id="quotesOut"></ul>
+    </div>
     
 </body>
 </html>
