added text to DOM

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="vendors/jquery-3.3.1.min.js"></script>
+    <script src="vendors/bootstrap.min.css"></script>
     <script src="scripts/client.js"></script>
     <title>Express Quotes</title>
 </head>
 <body>
     <h1>Express Quotes Example</h1>
-    <div id="output">
-        <ul id="quotesOut"></ul>
+    <div id="output" class="container">
+        <div class="row">
+            <div id="quotesOut" class="col-4"></div>
+        </div>
     </div>
     
 </body>
